# main-site-v2

./: Cargo.toml  README.md  Rocket.toml  main.py  projects.json  pyproject.toml
.github/workflows/: compile.yml
info/: projects.json
src/: main.rs
templates/: about.html  index.html  index.html.tera  projects.html  projects.html.tera
