[package]
name = "sushipythonus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rocket_contrib = "0.4.11"
serde_json = "1.0.82"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
